tests/transpiler/x/zig/list_nested_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/list_nested_assign.zig:5:33: error: array literal requires address-of operator (&) to coerce to slice type '[]i64'
